--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<table cellspacing="20">
 			<tr>
 				<td rowspan="3">
-					<img src="scr/Natasha3.jpeg" width="200" alt="здесь мое фото" />
+					<img src="Natasha3.jpeg" width="200" alt="здесь мое фото" />
 				</td>
 				<td><h1>Атанамычева Наталья Валентиновна</h1></td>
 			</tr>
